Add collector memory settings as attributes. Copy dynaTraceCollector init.d script as template.